<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mayu.databasedesign.MainActivity"
    android:background="#add8e6">


    <EditText
        android:id="@+id/firstName"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastname"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/marks"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/marks"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/userId"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/marks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/id"
        android:textColorHint="@color/colorAccent"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userId"
        android:layout_below="@+id/userId"
        android:layout_marginTop="49dp"
        android:text="@string/btnadd"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnupdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnadd"
        android:layout_centerHorizontal="true"
        android:text="@string/btnUpdate"
        android:textColor="@color/colorPrimaryDark"
        />

    <Button
        android:id="@+id/btnView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/userId"
        android:layout_alignTop="@+id/btnupdate"
        android:text="@string/btnview"
        android:textColor="@color/colorPrimaryDark"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:layout_toStartOf="@+id/btnView"
        android:text="@string/btndelete"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/idfordelete"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnadd"
        android:layout_below="@+id/btnadd"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/idfordelete"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorAccent" />


</RelativeLayout>
